[gd_scene load_steps=41 format=2]

[ext_resource path="res://Assets/Background/Backgrounds/Destroyed City_.png" type="Texture" id=1]
[ext_resource path="res://Assets/Background/Backgrounds/TerraSeca.jpg" type="Texture" id=2]
[ext_resource path="res://Assets/Background/Backgrounds/Limitador.png" type="Texture" id=3]
[ext_resource path="res://Instances/Main Character/ULN3K/UltraLaserNinja3000.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/level3/Level3.gd" type="Script" id=5]
[ext_resource path="res://Instances/Collectibles/up_cola.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/Game_elements/Enemy/Boss_Final/Godzilla.tscn" type="PackedScene" id=7]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=6]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=7]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=8]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=9]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=10]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=11]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=12]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=13]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=14]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=15]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=16]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=17]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=18]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=19]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=20]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=21]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=22]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=23]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=24]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=25]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=26]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=27]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=28]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=29]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=30]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=31]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=32]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="TileSet" id=33]
0/name = "TerraSeca.jpg 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 256, 256, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "TerraSeca.jpg 1"
1/texture = ExtResource( 2 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 288, 256, 32, 32 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 3 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "TerraSeca.jpg 2"
2/texture = ExtResource( 2 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 320, 256, 32, 32 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 17 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 17 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 18 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0
3/name = "TerraSeca.jpg 3"
3/texture = ExtResource( 2 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 352, 256, 32, 32 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape = SubResource( 19 )
3/shape_one_way = false
3/shape_one_way_margin = 1.0
3/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 19 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 20 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
3/z_index = 0
4/name = "TerraSeca.jpg 4"
4/texture = ExtResource( 2 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 384, 256, 32, 32 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape = SubResource( 21 )
4/shape_one_way = false
4/shape_one_way_margin = 1.0
4/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 21 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 22 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
4/z_index = 0
5/name = "TerraSeca.jpg 5"
5/texture = ExtResource( 2 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 256, 288, 32, 32 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape = SubResource( 23 )
5/shape_one_way = false
5/shape_one_way_margin = 1.0
5/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 23 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 24 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
5/z_index = 0
6/name = "TerraSeca.jpg 6"
6/texture = ExtResource( 2 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 288, 288, 32, 32 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape = SubResource( 25 )
6/shape_one_way = false
6/shape_one_way_margin = 1.0
6/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 25 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 26 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
6/z_index = 0
7/name = "TerraSeca.jpg 7"
7/texture = ExtResource( 2 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 320, 288, 32, 32 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape = SubResource( 27 )
7/shape_one_way = false
7/shape_one_way_margin = 1.0
7/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 27 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 28 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
7/z_index = 0
8/name = "TerraSeca.jpg 8"
8/texture = ExtResource( 2 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 352, 288, 32, 32 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape = SubResource( 29 )
8/shape_one_way = false
8/shape_one_way_margin = 1.0
8/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 29 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 30 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
8/z_index = 0
9/name = "TerraSeca.jpg 9"
9/texture = ExtResource( 2 )
9/tex_offset = Vector2( 0, 0 )
9/modulate = Color( 1, 1, 1, 1 )
9/region = Rect2( 384, 288, 32, 32 )
9/tile_mode = 0
9/occluder_offset = Vector2( 0, 0 )
9/navigation_offset = Vector2( 0, 0 )
9/shape_offset = Vector2( 0, 0 )
9/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
9/shape = SubResource( 31 )
9/shape_one_way = false
9/shape_one_way_margin = 1.0
9/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 31 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 32 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
9/z_index = 0
10/name = "TerraSeca.jpg 10"
10/texture = ExtResource( 2 )
10/tex_offset = Vector2( 0, 0 )
10/modulate = Color( 1, 1, 1, 1 )
10/region = Rect2( 256, 320, 32, 32 )
10/tile_mode = 0
10/occluder_offset = Vector2( 0, 0 )
10/navigation_offset = Vector2( 0, 0 )
10/shape_offset = Vector2( 0, 0 )
10/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
10/shape = SubResource( 5 )
10/shape_one_way = false
10/shape_one_way_margin = 1.0
10/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
10/z_index = 0
11/name = "TerraSeca.jpg 11"
11/texture = ExtResource( 2 )
11/tex_offset = Vector2( 0, 0 )
11/modulate = Color( 1, 1, 1, 1 )
11/region = Rect2( 288, 320, 32, 32 )
11/tile_mode = 0
11/occluder_offset = Vector2( 0, 0 )
11/navigation_offset = Vector2( 0, 0 )
11/shape_offset = Vector2( 0, 0 )
11/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
11/shape = SubResource( 7 )
11/shape_one_way = false
11/shape_one_way_margin = 1.0
11/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 7 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 8 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
11/z_index = 0
12/name = "TerraSeca.jpg 12"
12/texture = ExtResource( 2 )
12/tex_offset = Vector2( 0, 0 )
12/modulate = Color( 1, 1, 1, 1 )
12/region = Rect2( 320, 320, 32, 32 )
12/tile_mode = 0
12/occluder_offset = Vector2( 0, 0 )
12/navigation_offset = Vector2( 0, 0 )
12/shape_offset = Vector2( 0, 0 )
12/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
12/shape = SubResource( 9 )
12/shape_one_way = false
12/shape_one_way_margin = 1.0
12/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 9 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 10 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
12/z_index = 0
13/name = "TerraSeca.jpg 13"
13/texture = ExtResource( 2 )
13/tex_offset = Vector2( 0, 0 )
13/modulate = Color( 1, 1, 1, 1 )
13/region = Rect2( 352, 320, 32, 32 )
13/tile_mode = 0
13/occluder_offset = Vector2( 0, 0 )
13/navigation_offset = Vector2( 0, 0 )
13/shape_offset = Vector2( 0, 0 )
13/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
13/shape = SubResource( 11 )
13/shape_one_way = false
13/shape_one_way_margin = 1.0
13/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 11 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 12 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
13/z_index = 0
14/name = "TerraSeca.jpg 14"
14/texture = ExtResource( 2 )
14/tex_offset = Vector2( 0, 0 )
14/modulate = Color( 1, 1, 1, 1 )
14/region = Rect2( 384, 320, 32, 32 )
14/tile_mode = 0
14/occluder_offset = Vector2( 0, 0 )
14/navigation_offset = Vector2( 0, 0 )
14/shape_offset = Vector2( 0, 0 )
14/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
14/shape = SubResource( 13 )
14/shape_one_way = false
14/shape_one_way_margin = 1.0
14/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 13 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 14 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
14/z_index = 0
15/name = "Limitador.png 15"
15/texture = ExtResource( 3 )
15/tex_offset = Vector2( 0, 0 )
15/modulate = Color( 1, 1, 1, 1 )
15/region = Rect2( 64, 64, 32, 32 )
15/tile_mode = 0
15/occluder_offset = Vector2( 0, 0 )
15/navigation_offset = Vector2( 0, 0 )
15/shape_offset = Vector2( 0, 0 )
15/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
15/shape = SubResource( 15 )
15/shape_one_way = false
15/shape_one_way_margin = 1.0
15/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 15 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 16 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
15/z_index = 0

[node name="Level3" type="Node2D"]
script = ExtResource( 5 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 674.938, 396.03 )
scale = Vector2( 2.63549, 3.23429 )
texture = ExtResource( 1 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 33 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 131071, 15, 0, 65536, 15, 0, 65537, 15, 0, 65538, 15, 0, 65539, 15, 0, 65540, 15, 0, 65541, 15, 0, 65542, 15, 0, 65543, 15, 0, 65544, 15, 0, 65545, 15, 0, 65546, 15, 0, 65547, 15, 0, 65548, 15, 0, 65549, 15, 0, 65550, 15, 0, 65551, 15, 0, 65552, 15, 0, 65553, 15, 0, 65554, 15, 0, 65555, 15, 0, 65556, 15, 0, 65557, 15, 0, 65558, 15, 0, 65559, 15, 0, 65560, 15, 0, 65561, 15, 0, 65562, 15, 0, 65563, 15, 0, 65564, 15, 0, 65565, 15, 0, 65566, 15, 0, 65567, 15, 0, 65568, 15, 0, 65569, 15, 0, 65570, 15, 0, 65571, 15, 0, 65572, 15, 0, 65573, 15, 0, 65574, 15, 0, 65575, 15, 0, 65576, 15, 0, 65577, 15, 0, 65578, 15, 0, 196607, 15, 0, 131114, 15, 0, 262143, 15, 0, 196650, 15, 0, 327679, 15, 0, 262186, 15, 0, 393215, 15, 0, 327722, 15, 0, 458751, 15, 0, 393258, 15, 0, 524287, 15, 0, 458794, 15, 0, 589823, 15, 0, 524330, 15, 0, 655359, 15, 0, 589866, 15, 0, 720895, 15, 0, 655402, 15, 0, 786431, 15, 0, 720938, 15, 0, 851967, 15, 0, 786474, 15, 0, 917503, 15, 0, 852010, 15, 0, 983039, 15, 0, 917546, 15, 0, 1048575, 15, 0, 983040, 0, 0, 983041, 1, 0, 983042, 0, 0, 983043, 11, 0, 983044, 13, 0, 983045, 3, 0, 983046, 12, 0, 983047, 13, 0, 983048, 5, 0, 983049, 8, 0, 983050, 9, 0, 983051, 13, 0, 983052, 9, 0, 983053, 8, 0, 983054, 8, 0, 983055, 4, 0, 983056, 13, 0, 983057, 5, 0, 983058, 9, 0, 983059, 11, 0, 983060, 10, 0, 983061, 12, 0, 983062, 13, 0, 983063, 12, 0, 983064, 11, 0, 983065, 12, 0, 983066, 11, 0, 983067, 0, 0, 983068, 0, 0, 983069, 10, 0, 983070, 12, 0, 983071, 0, 0, 983072, 3, 0, 983073, 13, 0, 983074, 2, 0, 983075, 13, 0, 983076, 7, 0, 983077, 6, 0, 983078, 13, 0, 983079, 9, 0, 983080, 8, 0, 983081, 9, 0, 983082, 15, 0, 1114111, 15, 0, 1048576, 5, 0, 1048577, 3, 0, 1048578, 9, 0, 1048579, 5, 0, 1048580, 2, 0, 1048581, 9, 0, 1048582, 2, 0, 1048583, 5, 0, 1048584, 0, 0, 1048585, 10, 0, 1048586, 5, 0, 1048587, 12, 0, 1048588, 12, 0, 1048589, 5, 0, 1048590, 9, 0, 1048591, 5, 0, 1048592, 7, 0, 1048593, 9, 0, 1048594, 7, 0, 1048595, 5, 0, 1048596, 6, 0, 1048597, 3, 0, 1048598, 5, 0, 1048599, 4, 0, 1048600, 9, 0, 1048601, 9, 0, 1048602, 6, 0, 1048603, 4, 0, 1048604, 6, 0, 1048605, 5, 0, 1048606, 6, 0, 1048607, 5, 0, 1048608, 13, 0, 1048609, 3, 0, 1048610, 13, 0, 1048611, 2, 0, 1048612, 13, 0, 1048613, 12, 0, 1048614, 12, 0, 1048615, 8, 0, 1048616, 9, 0, 1048617, 9, 0, 1048618, 15, 0, 1179647, 15, 0, 1114112, 3, 0, 1114113, 2, 0, 1114114, 5, 0, 1114115, 2, 0, 1114116, 0, 0, 1114117, 5, 0, 1114118, 5, 0, 1114119, 0, 0, 1114120, 1, 0, 1114121, 0, 0, 1114122, 6, 0, 1114123, 5, 0, 1114124, 10, 0, 1114125, 12, 0, 1114126, 6, 0, 1114127, 7, 0, 1114128, 5, 0, 1114129, 7, 0, 1114130, 5, 0, 1114131, 14, 0, 1114132, 9, 0, 1114133, 5, 0, 1114134, 3, 0, 1114135, 3, 0, 1114136, 5, 0, 1114137, 4, 0, 1114138, 5, 0, 1114139, 2, 0, 1114140, 6, 0, 1114141, 2, 0, 1114142, 5, 0, 1114143, 4, 0, 1114144, 11, 0, 1114145, 12, 0, 1114146, 11, 0, 1114147, 12, 0, 1114148, 6, 0, 1114149, 4, 0, 1114150, 9, 0, 1114151, 4, 0, 1114152, 8, 0, 1114153, 8, 0, 1114154, 15, 0, 1245183, 15, 0, 1179648, 2, 0, 1179649, 3, 0, 1179650, 2, 0, 1179651, 0, 0, 1179652, 9, 0, 1179653, 5, 0, 1179654, 0, 0, 1179655, 9, 0, 1179656, 5, 0, 1179657, 6, 0, 1179658, 10, 0, 1179659, 1, 0, 1179660, 10, 0, 1179661, 1, 0, 1179662, 5, 0, 1179663, 9, 0, 1179664, 7, 0, 1179665, 9, 0, 1179666, 14, 0, 1179667, 5, 0, 1179668, 5, 0, 1179669, 3, 0, 1179670, 5, 0, 1179671, 9, 0, 1179672, 5, 0, 1179673, 9, 0, 1179674, 2, 0, 1179675, 6, 0, 1179676, 5, 0, 1179677, 6, 0, 1179678, 2, 0, 1179679, 5, 0, 1179680, 12, 0, 1179681, 11, 0, 1179682, 12, 0, 1179683, 12, 0, 1179684, 12, 0, 1179685, 4, 0, 1179686, 8, 0, 1179687, 4, 0, 1179688, 9, 0, 1179689, 8, 0, 1179690, 15, 0, 1310719, 15, 0, 1245184, 8, 0, 1245185, 9, 0, 1245186, 13, 0, 1245187, 11, 0, 1245188, 13, 0, 1245189, 11, 0, 1245190, 0, 0, 1245191, 6, 0, 1245192, 11, 0, 1245193, 11, 0, 1245194, 13, 0, 1245195, 0, 0, 1245196, 11, 0, 1245197, 6, 0, 1245198, 11, 0, 1245199, 10, 0, 1245200, 6, 0, 1245201, 9, 0, 1245202, 6, 0, 1245203, 9, 0, 1245204, 6, 0, 1245205, 9, 0, 1245206, 5, 0, 1245207, 9, 0, 1245208, 14, 0, 1245209, 11, 0, 1245210, 11, 0, 1245211, 5, 0, 1245212, 11, 0, 1245213, 5, 0, 1245214, 14, 0, 1245215, 10, 0, 1245216, 1, 0, 1245217, 8, 0, 1245218, 5, 0, 1245219, 8, 0, 1245220, 5, 0, 1245221, 2, 0, 1245222, 8, 0, 1245223, 9, 0, 1245224, 5, 0, 1245225, 8, 0, 1245226, 15, 0, 1376255, 15, 0, 1310720, 9, 0, 1310721, 8, 0, 1310722, 11, 0, 1310723, 13, 0, 1310724, 11, 0, 1310725, 11, 0, 1310726, 9, 0, 1310727, 11, 0, 1310728, 9, 0, 1310729, 13, 0, 1310730, 10, 0, 1310731, 11, 0, 1310732, 2, 0, 1310733, 9, 0, 1310734, 10, 0, 1310735, 9, 0, 1310736, 11, 0, 1310737, 10, 0, 1310738, 10, 0, 1310739, 13, 0, 1310740, 9, 0, 1310741, 10, 0, 1310742, 6, 0, 1310743, 11, 0, 1310744, 13, 0, 1310745, 5, 0, 1310746, 13, 0, 1310747, 11, 0, 1310748, 13, 0, 1310749, 9, 0, 1310750, 13, 0, 1310751, 5, 0, 1310752, 14, 0, 1310753, 9, 0, 1310754, 13, 0, 1310755, 9, 0, 1310756, 2, 0, 1310757, 5, 0, 1310758, 8, 0, 1310759, 7, 0, 1310760, 8, 0, 1310761, 8, 0, 1310762, 15, 0, 1441791, 15, 0, 1376256, 8, 0, 1376257, 9, 0, 1376258, 8, 0, 1376259, 11, 0, 1376260, 8, 0, 1376261, 13, 0, 1376262, 9, 0, 1376263, 0, 0, 1376264, 13, 0, 1376265, 9, 0, 1376266, 11, 0, 1376267, 10, 0, 1376268, 13, 0, 1376269, 11, 0, 1376270, 2, 0, 1376271, 11, 0, 1376272, 13, 0, 1376273, 9, 0, 1376274, 6, 0, 1376275, 10, 0, 1376276, 10, 0, 1376277, 6, 0, 1376278, 10, 0, 1376279, 9, 0, 1376280, 5, 0, 1376281, 13, 0, 1376282, 5, 0, 1376283, 13, 0, 1376284, 9, 0, 1376285, 13, 0, 1376286, 14, 0, 1376287, 13, 0, 1376288, 5, 0, 1376289, 9, 0, 1376290, 5, 0, 1376291, 2, 0, 1376292, 8, 0, 1376293, 2, 0, 1376294, 5, 0, 1376295, 8, 0, 1376296, 7, 0, 1376297, 8, 0, 1376298, 15, 0, 1507327, 15, 0, 1441792, 15, 0, 1441793, 15, 0, 1441794, 15, 0, 1441795, 15, 0, 1441796, 15, 0, 1441797, 15, 0, 1441798, 15, 0, 1441799, 15, 0, 1441800, 15, 0, 1441801, 15, 0, 1441802, 15, 0, 1441803, 15, 0, 1441804, 15, 0, 1441805, 15, 0, 1441806, 15, 0, 1441807, 15, 0, 1441808, 15, 0, 1441809, 15, 0, 1441810, 15, 0, 1441811, 15, 0, 1441812, 15, 0, 1441813, 15, 0, 1441814, 15, 0, 1441815, 15, 0, 1441816, 15, 0, 1441817, 15, 0, 1441818, 15, 0, 1441819, 15, 0, 1441820, 15, 0, 1441821, 15, 0, 1441822, 15, 0, 1441823, 15, 0, 1441824, 15, 0, 1441825, 15, 0, 1441826, 15, 0, 1441827, 15, 0, 1441828, 15, 0, 1441829, 15, 0, 1441830, 15, 0, 1441831, 15, 0, 1441832, 15, 0, 1441833, 15, 0, 1441834, 15, 0 )

[node name="ultraNinja" parent="." instance=ExtResource( 4 )]
position = Vector2( 200.725, 433.231 )

[node name="Node2D" parent="." instance=ExtResource( 6 )]
position = Vector2( 356.049, 434.05 )

[node name="Godzilla" parent="." groups=[
"god",
] instance=ExtResource( 7 )]
position = Vector2( 866.004, 443.003 )
scale = Vector2( 3, 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0
[connection signal="life" from="Node2D" to="ultraNinja" method="_on_Node2D_life"]
[connection signal="end" from="Godzilla" to="." method="_on_Godzilla_end"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
